Fixed CSS being misaligned

--- a/ui/modules/apps/windsOfChange/app.css
+++ b/ui/modules/apps/windsOfChange/app.css
@@ -18,11 +18,12 @@
   border-bottom: solid 1px white;
 }
 #settings {
-  width: 300px;
+  width: calc(100% - 20px);
   height: 300px;
+  padding-left: 10px;
+  padding-right: 10px;
   position: absolute;
   flex-direction: column;
-  justify-content: center;
   background-color: rgba(0, 0, 0, 0.6);
 }
 .settingsButton {
@@ -92,11 +93,12 @@
 #settings > button {
   font-weight: bold;
   background-color: rgba(0, 0, 0, 0.3);
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .buttonHolder {
   justify-content: space-between;
-  margin-right: 10px;
 }
 .buttonHolder > .button {
   width: calc(50% - 5px);
